--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,16 @@
   "private": true,
   "scripts": {
     "tsc": "tsc",
-    "start": "tsc && nodemon build/server.js"
+    "start": "tsc && nodemon build/server.js",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
@@ -24,6 +32,8 @@
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.20",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
