--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "tsc": "tsc",
     "start": "tsc && nodemon build/server.js",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf build && tsc",
     "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist"
+    "add-build": "git add build"
   },
   "pre-commit": [
     "ts.check",
