Revert "typo fixed"
This reverts commit 10d55b10fc4b96e0c5312fc15e963be9d9cfd7a2.

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "tsc": "tsc",
     "start": "tsc && nodemon build/server.js",
-    "build": "rimraf build && tsc",
+    "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add build"
+    "add-build": "git add dist"
   },
   "pre-commit": [
     "ts.check",
