--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "start": "tsc && nodemon build/server.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
